--- a/AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html
+++ b/AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html
@@ -2,29 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Little Orphan Annie</title>
 </head>
 
 <body>
-<img src="LittleOrphanAnnie01.jpg">
-<img src="LittleOrphanAnnie02.jpg">
-<img src="LittleOrphanAnnie03.jpg">
-<img src="LittleOrphanAnnie04.jpg">
-<img src="LittleOrphanAnnie05.jpg">
-<img src="LittleOrphanAnnie06.jpg">
-<img src="LittleOrphanAnnie07.jpg">
-<img src="LittleOrphanAnnie08.jpg">
-<img src="LittleOrphanAnnie09.jpg">
-<img src="AdventuresOfLittleOrphanAnnie1.jpg">
-<img src="AdventuresOfLittleOrphanAnnie2.jpg">
-<img src="AdventuresOfLittleOrphanAnnie3.jpg"> <br>
-Series: on-going, 9 issue newspaper collections by C&amp;L, 3 issues in comic format by Dell<br>
-Illustrator: Harold Gray<br>
-Writer: Harold Gray<br>
-Publisher: 1924-1934 Cupples &amp; Leon; 1941-1948 Dell<br>
+<img src="LittleOrphanAnnie01.jpg"><br>
+9 issue newspaper collections 1924-1934 by Cupples &amp; Leon<br>
+3 issues in comic format  1941-1948 by Dell<br>
+Illustrator and writer: Harold Gray
 <p>
-About:<br>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="LittleOrphanAnnie01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleOrphanAnnie02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleOrphanAnnie03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleOrphanAnnie04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleOrphanAnnie05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleOrphanAnnie06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleOrphanAnnie07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleOrphanAnnie08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LittleOrphanAnnie09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresOfLittleOrphanAnnie1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresOfLittleOrphanAnnie2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventuresOfLittleOrphanAnnie3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Little Orphan Annie is a daily American comic strip created by Harold Gray and syndicated by the Tribune Media Services. The strip took its name from the 1885 poem "Little Orphant Annie" by James Whitcomb Riley, and made its debut on August 5, 1924, in the New York Daily News.
 </p><p>
 The plot follows the wide-ranging adventures of Annie, her dog Sandy and her benefactor Oliver "Daddy" Warbucks. Secondary characters include Punjab, the Asp and Mr. Am. The strip attracted adult readers with political commentary that targeted (among other things) organized labor, the New Deal and communism.
