--- a/AgentsOfLaw/AgentsOfLaw.html
+++ b/AgentsOfLaw/AgentsOfLaw.html
@@ -2,24 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Agents of Law</title>
 </head>
 
 <body>
-<h2>Agents of Law</h2>
-<img src="AgentsOfLaw1.jpg"> 
-<img src="AgentsOfLaw2.jpg">
-<img src="AgentsOfLaw3.jpg"><br>
-<img src="AgentsOfLaw4.jpg">
-<img src="AgentsOfLaw5.jpg">
-<img src="AgentsOfLaw6.jpg"><br>
-Series: 6 issue on going series<br>
-Illustrator: Dan Lawlis<br>
-Writer: Keith Giffen, Lovern Kindzeirski<br>
-Publisher: 1995 Dark Horse<br>
+<img src="AgentsOfLaw1.jpg"><br>
+6 issues 1995 Dark Horse
 
 <p>
+
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AgentsOfLaw1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgentsOfLaw2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgentsOfLaw3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgentsOfLaw4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgentsOfLaw5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AgentsOfLaw6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 A continuation of Catalyst: Agents of Change.
 </p><p>
 <p>
