--- a/Akira/akira.html
+++ b/Akira/akira.html
@@ -2,20 +2,71 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Akira</title>
 </head>
 
 <body>
-<h2>Akira</h2>
-<img src="Akira1Young1982.jpg">
-<img src="Akira1Marvel1988.jpg"><br>
-<img src="Akira1Marvel1990.jpg">
-<img src="Akira1DarkHorse2000.jpg"> <br>
-Series: 1982 series Young Magazine; Kondansha 1984-1993 6 issues; Epic 1988-1995 38 issues, 1990 8 issue mini series; Dark Horse 6 issue mini series. <br>
-Publisher: 1982 Young Magazine; 1990 Kodansha; 1988, 1990 Epic/Marvel; 2000 Dark Horse<br>
+Akira<br>
+<img src="Akira1Young1982.jpg"><br>
+1982 Young Magazine. 6 issues 1984-1993 Kondansha. 38 issues 1988-1995 Epic (Marvel). 8 issues, 6 issues 1990-2000 Dark Horse.
 <p>
-About: is a Japanese manga series written and illustrated by Katsuhiro Otomo. Set in a post-apocalyptic Neo-Tokyo, the work uses conventions of the cyberpunk genre to detail a saga of turmoil. Initially serialized in the pages of Young Magazine from 1982 until 1990, the work was collected into six volumes by its publisher Kodansha. 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Akira1Young1982.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1988_38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1Marvel1990.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Akira1DarkHorse2000.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Akira is a Japanese manga series written and illustrated by Katsuhiro Otomo. Set in a post-apocalyptic Neo-Tokyo, the work uses conventions of the cyberpunk genre to detail a saga of turmoil. Initially serialized in the pages of Young Magazine from 1982 until 1990, the work was collected into six volumes by its publisher Kodansha. 
 </p><p>
 The work was first published in an English-language version by the Marvel Comics imprint Epic Comics, one of the first manga works to be translated in its entirety. Otomo's art is considered outstanding, and a breakthrough for both Otomo and the manga form. Throughout the breadth of the work, Otomo explores themes of social isolation, corruption, and power.
 </p><p>
