--- a/AdventureTime/AdventureTime.html
+++ b/AdventureTime/AdventureTime.html
@@ -9,8 +9,8 @@
 
 <body>
 <img src="AdventureTimeLogo.jpg"> <br>
-Series: 279 TV episodes (10 seasons) 2010<br>
-Producer: Frederator Studios for Cartoon Network<br>
+279 TV episodes (10 seasons) so far, 2010 Frederator Studios for Cartoon Network<br>
+17 issues 2012-2019 by Boom! Studios<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -54,6 +54,9 @@ Producer: Frederator Studios for Cartoon Network<br>
 <div class="mySlides" style="text-align: center;"><img src="Prismo.jpg" title="Prismo"></div>
 <div class="mySlides" style="text-align: center;"><img src="GlobGrod.jpg" title="Glob Glob Glob Grod"></div>
 <div class="mySlides" style="text-align: center;"><img src="Snail.jpg" title="the Snail"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureTime001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureTime002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AdventureTime003.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
