--- a/AirtightGarage/AirtightGarage.html
+++ b/AirtightGarage/AirtightGarage.html
@@ -2,22 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Airtight Garage</title>
 </head>
 
 <body>
-<h2>Airtight Garage</h2>
 <img src="AirtightGarage.jpg"><br>
-<img src="AirtightGarage01.jpg">
-<img src="AirtightGarage02.jpg"><br>
-<img src="AirtightGarage03.jpg">
-<img src="AirtightGarage04.jpg"> <br>
-Series: 1987 Graphic Novel, 1993 4 issue mini series reprint<br>
-Illustrator: Moebius<br>
-Writer: Moebius<br>
-Publisher: 1987, 1993 Marvel<br>
+1987 Graphic Novel, 1993 4 issue mini series reprint by Marvel<br>
+Illustrator and writer: Moebius<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AirtightGarage01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AirtightGarage02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AirtightGarage03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AirtightGarage04.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 The Airtight Garage was also the name of a bar and videogame parlor in the Metreon in San Francisco, featuring unique original games developed for the venue. The name and architectural styling was no coincidence, and Moebius souvenirs could be purchased there. 
 </p><p>
 The "garage" itself is actually an asteroid in the constellation Leo which houses a pocket universe. Major Grubert orbits the asteroid in his spaceship Ciguri, from which he oversees the development of the worlds contained within. Several entities, including Jerry Cornelius, seek to invade the garage. 
