--- a/AlienLegion/alienlegion.html
+++ b/AlienLegion/alienlegion.html
@@ -2,21 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Alien Legion</title>
 </head>
 
 <body>
-<h2>Alien Legion</h2>
-<img src="AlienLegion001.jpg">
-<img src="ALGN.jpg"><br>
-<img src="ALV2.jpg">
-<img src="ALOmnibus.jpg"> <br>
-Series: on-going, 38 issues. 1 Graphic Novel, 1 Omnibus Dark Horse<br>
+<img src="AlienLegion001.jpg"><br>
+20 issues, 1 Graphic Novel, 18 issues 1983-1997 Epic (Marvel). Omnibus 2009 Dark Horse<br>
 Illustrator: Frank Cirocco, Terry Austin<br>
 Writer: Carl Potts, Alan Zelenetz<br>
-Publisher: 1983-1990 Epic (Marvel); 2009 Dark Horse<br>
 <p>
+
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AlienLegion001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ALGN.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ALV2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ALOmnibus.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 About: Created by Carl Potts, Alan Zelenetz, and Frank Cirocco for Marvel Comics's Epic Comics imprint in 1983. It features a military unit, Force Nomad, similar to the French Foreign Legion.
 </p><p>
 The 18-issue Alien Legion in 1987-1990, minus "The", was generally scripted by Chuck Dixon and penciled by Larry Stroman.
@@ -25,7 +39,7 @@ The 18-issue Alien Legion in 1987-1990, minus "The", was generally scripted by C
 Issues:<ul>
 <li>The Alien Legion #1-20. 1983-1987 Epic (Marvel)</li>
 <li>The Alien Legion Graphic Novel. 1986 Epic (Marvel)</li>
-<li>Alien Legion #1-18. Epic (Marvel)</li>
+<li>Alien Legion #1-18. 1987-1990 Epic (Marvel)</li>
 <li>Alien Legion: Slaughterworld (1991 Marvel), collects The Alien Legion #1 and 7-11.</li>
 <li>Force Nomad and Piecemaker, collecting the second series. Checker Book</li>
 <li>Footsloggers collects the first six issues of the first volume. Checker Book</li>
