--- a/AlienWorlds/AlienWorlds.html
+++ b/AlienWorlds/AlienWorlds.html
@@ -2,29 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Alien Worlds</title>
 </head>
 
 <body>
-<h2>Alien Worlds</h2>
-<img src="AlienWorlds1.jpg">
-<img src="AlienWorlds2.jpg">
-<img src="AlienWorlds3.jpg">
-<img src="AlienWorlds4.jpg">
-<img src="AlienWorlds5.jpg">
-<img src="AlienWorlds6.jpg">
-<img src="AlienWorlds7.jpg">
-<img src="AlienWorlds3D.jpg">
-<img src="AlienWorlds8.jpg">
-<img src="AlienWorlds9.jpg">
-<img src="AlienWorlds10.jpg">
-<img src="AlienWorlds.jpg"> <br>
-Series: on-going, 10 issues<br>
-Illustrator: various<br>
-Writer: Bruce Jones (Jan Strnad #8, Frank Brunner #9)<br>
-Publisher: 1982-1984 Pacific Comics, 1984-1988 Eclipse<br>
+<img src="AlienWorlds1.jpg"><br>
+10 issues 1982-1984 Pacific Comics, 1984-1988 Eclipse<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds3D.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AlienWorlds.jpg"></div>
+
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 About: #1-7 PC, #8-9 Eclipse, #10 Blackthorne. In May 1988, Eclipse issued a standalone, unnumbered edition of the title as part of its Graphic Album Series, featuring all new stories and art (The dinosaur cover) referred to as "Book 1".
 
 </p>
