--- a/AllWinners/AllWinners.html
+++ b/AllWinners/AllWinners.html
@@ -2,24 +2,37 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>All Winners 1948</title>
 </head>
 
 <body>
-<h2>All Winners Comics 1948 Series</h2>
-<img src="AllWinners.jpg">
-<img src="AllWesternWinners.jpg">
-<img src="WesternWinners.jpg"><br>
-<img src="BlackRider.jpg">
-<img src="WesternTalesOfBlackRider.jpg">
-<img src="GunsmokeWestern.jpg"> <br>
-Series: on-going<br>
-Publisher: 1948-1963 Atlas (Marvel)<br>
+<img src="AllWinners.jpg"><br>
+77 issues with changing titles. 1948-1963 Atlas (Marvel)<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AllWinners.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AllWesternWinners.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WesternWinners.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackRider.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WesternTalesOfBlackRider.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GunsmokeWestern.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Note: This title has nothing to do with Timely Comics All Winners 1941 Series.<br>
 About: All Winners #1 becomes, All Western Winners #2-4, then Western Winners #5-7, then Black Rider #8-27, then Western Tales of Black Rider #28-31, then Gunsmoke Western #32-77.
-
 </p>
+
 </body>
 </html>
