--- a/AllWinners1941/AllWinners1941.html
+++ b/AllWinners1941/AllWinners1941.html
@@ -13,7 +13,7 @@ All Winners 1941 Series<br>
 Series: 20 issues (#1-21, no #20) 1941<br>
 Publisher: Timely (Marvel)<br>
 <p>
-Note: Not to be confused with Atlas Comics 1948 All Winners series.<br>
+Not to be confused with Atlas Comics 1948 All Winners series.<br>
 Also they never released a #20, it goes from #19 Fall 1946 to #21 Winter 1946.<br>
 </p><p>
 <div class="row"> <div class="column">
@@ -47,27 +47,13 @@ Also they never released a #20, it goes from #19 Fall 1946 to #21 Winter 1946.<b
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 
-<ul>
+<ul>Stories:
 <li><a href="AllWinners01.html">All Winners #1</a></li>
 <li><a href="AllWinners02.html">All Winners #2</a></li>
 <li><a href="AllWinners03.html">All Winners #3</a></li>
 <li><a href="AllWinners04.html">All Winners #4</a></li>
 <li><a href="AllWinners05.html">All Winners #5</a></li>
-<li><a href="AllWinners06.html">All Winners #6</a></li>
-<li><a href="AllWinners07.html">All Winners #7</a></li>
-<li><a href="AllWinners08.html">All Winners #8</a></li>
-<li><a href="AllWinners09.html">All Winners #9</a></li>
-<li><a href="AllWinners10.html">All Winners #10</a></li>
-<li><a href="AllWinners11.html">All Winners #11</a></li>
-<li><a href="AllWinners12.html">All Winners #12</a></li>
-<li><a href="AllWinners13.html">All Winners #13</a></li>
-<li><a href="AllWinners14.html">All Winners #14</a></li>
-<li><a href="AllWinners15.html">All Winners #15</a></li>
-<li><a href="AllWinners16.html">All Winners #16</a></li>
-<li><a href="AllWinners17.html">All Winners #17</a></li>
-<li><a href="AllWinners18.html">All Winners #18</a></li>
-<li><a href="AllWinners19.html">All Winners #19</a></li>
-<li><a href="AllWinners21.html">All Winners #21</a></li>
+
 
 </ul>
 
