--- a/kb.html
+++ b/kb.html
@@ -8897,6 +8897,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Moon Girl</td>
+<td>1947</td>
+<td>EC</td>
+<td><a href="MoonGirl/MoonGirl.html">Details</td>
+</tr>
+
+<tr>
 <td>Moon Girl and Devil Dinosaur</td>
 <td>2016</td>
 <td>Marvel</td>
