--- a/kb.html
+++ b/kb.html
@@ -2867,6 +2867,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Captain Sternn</td>
+<td>1977</td>
+<td>Tyrannosaurus Press</td>
+<td><a href="CaptainSternn/CaptainSternn.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Universe</td>
 <td>2006</td>
 <td>Marvel</td>
