--- a/Hellcat/Hellcat.html
+++ b/Hellcat/Hellcat.html
@@ -2,18 +2,57 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Hellcat</title>
 </head>
 
 <body>
-Hellcat<br>
-<img src="Hellcat2000.jpg"> <br>
-Publisher: Marvel<br>
+<img src="Hellcat2009_01.jpg"> <br>
+3 issues 2000, 5 issues 2008, 17 issues 2016 by Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2000_01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2000_02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2000_03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2008_01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2008_02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2008_03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2008_04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2008_05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2009_01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellcat2016_18.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Hellcat (Patricia "Patsy" Walker) is a fictional superhero appearing in American comic books published by Marvel Comics. She premiered as the star of a teen romantic-comedy series and was later integrated into Marvel superhero franchises such as the Avengers and the Defenders.
 </p><p>
-Created by Otto Binder and Ruth Atkinson, Patsy Walker first appeared in Miss America Magazine #2 (Nov. 1944), published by Marvel precursor Timely Comics, and became Hellcat in The Avengers #144 (Feb. 1976). Starring in her own title in 2000.
+Created by Otto Binder and Ruth Atkinson, Patsy Walker first appeared in Miss America Magazine #2 (Nov. 1944), published by Marvel precursor Timely Comics, and became Hellcat in The Avengers #144 (Feb. 1976).
 </p>
 </body>
 </html>
