--- a/VaultOfEvil/VaultOfEvil.html
+++ b/VaultOfEvil/VaultOfEvil.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="VaultOfEvil.jpg"> <br>
+<img src="VaultOfEvil01.jpg"> <br>
 Series: 23 issues 1973 <br>
 Cover by Gil Kane and Tom Palmer<br>
 Publisher: Marvel<br>
@@ -21,7 +21,16 @@ Publisher: Marvel<br>
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VaultOfEvil10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
