--- a/kb.html
+++ b/kb.html
@@ -11427,6 +11427,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Space Adventures</td>
+<td>1958</td>
+<td>Charlton</td>
+<td><a href="SpaceAdventures/SpaceAdventures.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Space Invaders</td>
 <td>1978</td>
 <td>Taito</td>
