--- a/kb.html
+++ b/kb.html
@@ -1243,7 +1243,7 @@ Creative Knowledgebase<br>
 <tr>
 <td>Amazing Stories</td>
 <td>1926</td>
-<td>Experimenter Publishing</td>
+<td>Experimenter</td>
 <td><a href="AmazingStories/AmazingStories.html">Details</a></td>
 </tr>
 
