--- a/Angel/Angel.html
+++ b/Angel/Angel.html
@@ -7,13 +7,10 @@
 </head>
 
 <body>
-<h2>Angel</h2>
-<img src="Angel.jpg"> 
-<img src="AngelAndFaith.jpg"><br>
-Series: TV adaptation, 17 issues <br>
+<img src="Angel.jpg"> <img src="AngelAndFaith.jpg"><br>
+TV adaptation, 17 issues , 1999-2001 Dark Horse<br>
 Illustrator: Christian Zanier, Andy Owens<br>
-Writer: Josh Wedon, Brian Lynch, Bill Willingham<br>
-Publisher: 1999 -2001 Dark Horse<br>
+Writer: Josh Wedon, Brian Lynch, Bill Willingham
 <p>
 Angel is an American television series, a spin-off from the television series Buffy the Vampire Slayer. The series was created by Buffy's creator, Joss Whedon, in collaboration with David Greenwalt. It aired on The WB from October 5, 1999, to May 19, 2004, consisting of five seasons and 110 episodes. Like Buffy, it was produced by Whedon's production company, Mutant Enemy.
 </p><p>
