--- a/AndrewVachssUnderground/AndrewVachssUnderground.html
+++ b/AndrewVachssUnderground/AndrewVachssUnderground.html
@@ -2,18 +2,33 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Andrew Vachss Underground</title>
 </head>
 
 <body>
-<h2>Andrew Vachss' Underground</h2>
-<img src="AndrewVachssUnderground.jpg"> <br>
-Series: <br>
-Illustrator: Harry O. Morris<br>
-Writer: Andrew Vachss<br>
-Publisher: 1993 Dark Horse<br>
+<img src="AndrewVachssUnderground01.jpg"> <br>
+4 issues 1993 - 1994 by Dark Horse
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AndrewVachssUnderground04.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 When there is no longer any reliable source of "news," there is nothing to trust... and "The Terror" descends. 
 </p><p>
 For decades, The Rulers have been at work, using prisoner/slave labor to construct Underground, believing that all those who flee there will trade their freedom for security. Now, "truth" is what the Rulers say it is, and The Rulers rule all. 
