--- a/AngelaAsgardAssassin/AngelaAsgardAssassin.html
+++ b/AngelaAsgardAssassin/AngelaAsgardAssassin.html
@@ -2,19 +2,42 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Angela Asgard Assassin</title>
 </head>
 
 <body>
-<h2>Angela Asgard Assassin</h2>
-<img src="AngelaAsgardAssassin.jpg">
-<img src="AngelaAsgardAssassinB.jpg"> <br>
-Series: on-going, 6 issues, variant covers<br>
-Illustrator: Phil Jimenez, Stephanie Hans<br>
-Writer: Kieron Gillen, Marguerite Bennett<br>
-Publisher: 2014 Marvel<br>
+<img src="AngelaAsgardAssassin01.jpg"><br>
+6 issues (variant covers), 2014-2015 Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaAsgardAssassin13.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 All her life, Angela, the finest warrior of Heven, was raised to hate Asgard with every fiber of her being. And now Angela knows the truth about her identity: She is Thor's sister. She is an Asgardian. 
 </p><p>
 Cast out of her home and wanting nothing to do with Asgard, Angela must now strike out on her own! But what does Angela have that both Asgard and Heven want? And why are they so eager to get it?
