--- a/AngelaQueenOfHel/AngelaQueenOfHel.html
+++ b/AngelaQueenOfHel/AngelaQueenOfHel.html
@@ -2,18 +2,41 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Angela Queen Of Hel</title>
 </head>
 
 <body>
-<h2>Angela Queen Of Hel</h2>
-<img src="AngelaQueenOfHel.jpg"> <br>
-Series: on-going, 7 issues <br>
-Illustrator: Julian Totino Tedesco <br>
-Writer: Marguerite Bennett <br>
-Publisher: 2015 Marvel<br>
+<img src="AngelaQueenOfHel01.jpg"> <br>
+7 issues (variant covers), 1 TPB, Publisher: 2015 Marvel<br>
+Illustrator: Julian Totino Tedesco. Writer: Marguerite Bennett <br>
+<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AngelaQueenOfHel10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 HEL HATH A NEW FURY. Stolen from ASGARD, exiled from HEVEN, and robbed of SERA, her greatest companion, ANGELA plunges into the depths of blackest HEL to save her friend. Once there, the lost princess of Asgard will carve out a realm of her very own. All hail ANGELA, THE NEW QUEEN OF HEL!
 </p>
 </body>
