--- a/AnimalFables/AnimalFables.html
+++ b/AnimalFables/AnimalFables.html
@@ -9,16 +9,9 @@
 
 <body>
 <img src="AnimalFables1.jpg" title="title"> <br>
-Series: 7 issues 1946<br>
+7 issues 1946 by EC<br>
 Illustrated by Burton Geller<br>
-Publisher: EC<br>
 <p>
-Face it, fans who think of E.C. do not initially conjure up an image of funny animal titles. But, as the publisher sought to find its niche in its earliest days, it tried a number of genres before striking the successful field of fantastic horror, striking art, and satire.
-</p><p>
-The series’ primary continuing character was Human Torch imitation Freddy Firefly. Korky Kangaroo, Petey Pig, Little Danny Demon, Hector the Inspector, Willie the Weasel, and Bozo the Bowlegged Bull also make regular appearances.
-</p><p>
-Issue #1: Freddy turns into the superhero Firely when he says the magic words "Take Fire!". He tracks down the thief who stole the Van Jonker diamond.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -38,6 +31,12 @@ Issue #1: Freddy turns into the superhero Firely when he says the magic words "T
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 
+</p><p>
+Face it, fans who think of E.C. do not initially conjure up an image of funny animal titles. But, as the publisher sought to find its niche in its earliest days, it tried a number of genres before striking the successful field of fantastic horror, striking art, and satire.
+</p><p>
+The series’ primary continuing character was Human Torch imitation Freddy Firefly. Korky Kangaroo, Petey Pig, Little Danny Demon, Hector the Inspector, Willie the Weasel, and Bozo the Bowlegged Bull also make regular appearances.
+</p><p>
+Issue #1: Freddy turns into the superhero Firely when he says the magic words "Take Fire!". He tracks down the thief who stole the Van Jonker diamond.
 </p>
 </body>
 </html>
