--- a/AnimalMan/AnimalMan.html
+++ b/AnimalMan/AnimalMan.html
@@ -2,23 +2,53 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Animal Man</title>
 </head>
 
 <body>
-<h2>Animal Man</h2>
-<img src="AnimalMan.jpg">
-<img src="AnimalMan1991.jpg">
-<img src="AnimalMan2011.jpg"> <br>
-Series: on-going, 89 issues, also Collection of #1-9, returned in 2011.<br>
-Illustrator: Brian Bolland<br>
-Writer: Grant Morrison<br>
-Publisher: 1988, 2011 DC; 1991 Vertigo (DC)<br>
+
+<img src="AnimalMan01.jpg"><br>
+89 issues 1988-1885 DC, 1991-2011 Vertigo (DC)<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnimalMan20.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 As a result of being in proximity to an exploding extraterrestrial spaceship, Buddy Baker acquires the ability to temporarily "borrow" the abilities of animals (such as a bird's flight or the proportionate strength of an ant). Using these powers, Baker fights crime as the costumed superhero Animal Man.
 </p><p>
-Created by writer Dave Wood and artist Carmine Infantino, Buddy Baker first appeared in Strange Adventures #180 (September 1965) and adopted the name Animal Man in issue #190. Animal Man was a minor character for his first twenty years, never gaining the popularity of other DC heroes.
+Created by writer Dave Wood and artist Carmine Infantino, Buddy Baker first appeared in <a href="../StrangeAdventures/StrangeAdventures.html">Strange Adventures</a> #180 (September 1965) and adopted the name Animal Man in issue #190. Animal Man was a minor character for his first twenty years, never gaining the popularity of other DC heroes.
 </p><p>
 In the late 1980s, following the slate-cleaning Crisis on Infinite Earths event, DC began employing innovative writers, mostly young and mostly from the UK, to revamp some of their old characters. In the period that saw Alan Moore reinvent Swamp Thing, and Neil Gaiman do the same with The Sandman, Animal Man was reimagined by Scottish writer Grant Morrison. Morrison wrote the first 26 issues of the Animal Man comic book, published between 1988 and 1990.
 </p>
