--- a/Annex/Annex.html
+++ b/Annex/Annex.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Annex</h2>
 <img src="Annex.jpg"> <br>
-Series: on-going, 4 issues<br>
-Illustrator: Walter McDaniel<br>
-Writer: Jack C. Harris<br>
-Publisher: 1994 Marvel<br>
+4 issues, 1994 by Marvel<br>
+Illustrator: Walter McDaniel. Writer: Jack C. Harris
 <p>
 #1 Enemy Unknown. Someone is trying to get the Annex armor, and they don't care if Alex Ellis has to die for them to get it; Spider-Man guest-stars. 
 </p><p>
