--- a/Annie/Annie.html
+++ b/Annie/Annie.html
@@ -7,12 +7,9 @@
 </head>
 
 <body>
-<h2>Annie</h2>
 <img src="Annie.jpg"> <br>
-Series: movie adaptation, 2 issues<br>
-Illustrator: Win Mortimer, Vince Colletta<br>
-Writer: Tom DeFalco<br>
-Publisher: 1982 Marvel<br>
+2 issue movie adaptation 1982 Marvel<br>
+Illustrator: Win Mortimer, Vince Colletta. Writer: Tom DeFalco<br>
 <p>
 For the original 1924 series, see: <a href="../AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html">Little Orphan Annie</a>
 </p><p>
