--- a/AnnieOakley/AnnieOakley.html
+++ b/AnnieOakley/AnnieOakley.html
@@ -2,23 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Annie Oakley</title>
 </head>
 
 <body>
-<h2>Annie Oakley</h2>
-<img src="AnnieOakley1.jpg">
-<img src="AnnieOakley2.jpg">
-<img src="AnnieOakley3.jpg">
-<img src="AnnieOakley4.jpg">
-<img src="AnnieOakley5.jpg">
-<img src="AnnieOakley6.jpg"> <br>
-Series: on-going<br>
-Illustrator: Various, Ed Winiarski, Chris Rule<br>
-Writer:Various<br>
-Publisher: 1948-1956 Atlas (Marvel)<br>
+<img src="AnnieOakley1.jpg"><br>
+4 issues 1948, 7 issues 1955-1956 Atlas (Marvel)<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnnieOakley11.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
 Western Tales of action and adventure starring the famous female sharpshooter, Annie Oakley.
 </p><p>
 Issue #1<ul>
