--- a/kb.html
+++ b/kb.html
@@ -4218,6 +4218,13 @@ Creative Knowledgebase<br>
 </tr>
 
 <tr>
+<td>Demon</td>
+<td>1972</td>
+<td>DC</td>
+<td><a href="Demon/Demon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Demon Dreams</td>
 <td>1984</td>
 <td>PC</td>
