--- a/DevilDogDugan/DevilDogDugan.html
+++ b/DevilDogDugan/DevilDogDugan.html
@@ -2,32 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Devil Dog Dugan</title>
 </head>
 
 <body>
-Devil Dog Dugan<br>
 <img src="DevilDogDugan1.jpg"><br>
-Series: Devil Dog Dugan #1-3, Tales of the Marines #4, Marines at War #5-7<br>
-Publisher: Atlas, Marvel 1956 to 1957<br>
+7 issues 1956-1957, Devil Dog Dugan #1-3, Tales of the Marines #4, Marines at War #5-7, by Atlas (Marvel)<br>
 Covers by John Severin, illustrated by Sol Brodsky<br>
 <p>
-<img src="DevilDogDugan2.jpg"> 
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="DevilDogDugan1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDogDugan2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DevilDogDugan3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TalesOfTheMarines4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarinesAtWar5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarinesAtWar6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MarinesAtWar7.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-<img src="DevilDogDugan3.jpg">
-</p><p>
-Numbering continues with Tales of the Marines (Marvel, 1957 series) #4
-</p><p>
-<img src="TalesOfTheMarines4.jpg">
-</p><p>
-Numbering continues with Marines at War (Marvel, 1957 series) #5
-</p><p>
-<img src="MarinesAtWar5.jpg">
-</p><p>
-<img src="MarinesAtWar6.jpg">
-</p><p>
-<img src="MarinesAtWar7.jpg">
+Series numbering continues with Tales of the Marines (Marvel, 1957 series) #4
+Then the numbering continues with Marines at War (Marvel, 1957 series) #5
 
 </p>
 </body>
