--- a/IronFist/IronFist.html
+++ b/IronFist/IronFist.html
@@ -2,41 +2,52 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Iron Fist</title>
 </head>
 
 <body>
-<h2>Iron Fist</h2>
 <img src="IronFist001.jpg"><br>
 Series: 15 issues, Nov 1975 to Sept 1977<br>
 Publisher: Marvel<br>
 Character: <a href="../../Character/IronFist.html">Iron Fist</a>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="IronFist001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="IronFist015.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+</p><p>
+See also Power Man and Iron Fist <a href="../Powerman/Powerman50.html">Powerman #50</a>
+</p><p>
 Iron Fist (Daniel "Danny" Rand) is a fictional superhero appearing in American comic books published by Marvel Comics. Created by Roy Thomas and Gil Kane, Iron Fist first appeared in <a href="../MarvelPremiere/MarvelPremiere.html">Marvel Premiere</a> #15 (May 1974). The character is a practitioner of martial arts and the wielder of a mystical force known as the Iron Fist, which allows him to summon and focus his chi. He starred in his own solo series in the 1970s, and shared the title Power Man and Iron Fist for several years with Luke Cage, partnering with Cage to form the superhero team Heroes for Hire. The character has starred in numerous solo titles since, including The Immortal Iron Fist, which expanded on his origin story and the history of the Iron Fist.
 </p><p>
 Iron Fist has been adapted to appear in several animated television series and video games. Finn Jones portrays the character in the live-action television series Iron Fist, The Defenders, and the upcoming second season of Luke Cage.
 </p>
-
-Issues:<ul>
-<li><a href="IronFist001.html">Iron Fist #1</a></li>
-<li><a href="IronFist002.html">Iron Fist #2</a></li>
-<li><a href="IronFist003.html">Iron Fist #3</a></li>
-<li><a href="IronFist004.html">Iron Fist #4</a></li>
-<li><a href="IronFist005.html">Iron Fist #5</a></li>
-<li><a href="IronFist006.html">Iron Fist #6</a></li>
-<li><a href="IronFist007.html">Iron Fist #7</a></li>
-<li><a href="IronFist008.html">Iron Fist #8</a></li>
-<li><a href="IronFist009.html">Iron Fist #9</a></li>
-<li><a href="IronFist010.html">Iron Fist #10</a></li>
-<li><a href="IronFist011.html">Iron Fist #11</a></li>
-<li><a href="IronFist012.html">Iron Fist #12</a></li>
-<li><a href="IronFist013.html">Iron Fist #13</a></li>
-<li><a href="IronFist014.html">Iron Fist #14</a></li>
-<li><a href="IronFist015.html">Iron Fist #15</a></li>
-</ul>
-
-See also Power Man and Iron Fist <a href="../Powerman/Powerman50.html">Powerman #50</a>
 
 </body>
 </html>
