--- a/IronFist/IronFist.html
+++ b/IronFist/IronFist.html
@@ -9,9 +9,7 @@
 
 <body>
 <img src="IronFist001.jpg"><br>
-Series: 15 issues, Nov 1975 to Sept 1977<br>
-Publisher: Marvel<br>
-Character: <a href="../../Character/IronFist.html">Iron Fist</a>
+15 issues, 1975-1977 by Marvel<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -42,11 +40,11 @@ Character: <a href="../../Character/IronFist.html">Iron Fist</a>
 </div></div>
 
 </p><p>
-See also Power Man and Iron Fist <a href="../Powerman/Powerman50.html">Powerman #50</a>
-</p><p>
 Iron Fist (Daniel "Danny" Rand) is a fictional superhero appearing in American comic books published by Marvel Comics. Created by Roy Thomas and Gil Kane, Iron Fist first appeared in <a href="../MarvelPremiere/MarvelPremiere.html">Marvel Premiere</a> #15 (May 1974). The character is a practitioner of martial arts and the wielder of a mystical force known as the Iron Fist, which allows him to summon and focus his chi. He starred in his own solo series in the 1970s, and shared the title Power Man and Iron Fist for several years with Luke Cage, partnering with Cage to form the superhero team Heroes for Hire. The character has starred in numerous solo titles since, including The Immortal Iron Fist, which expanded on his origin story and the history of the Iron Fist.
 </p><p>
 Iron Fist has been adapted to appear in several animated television series and video games. Finn Jones portrays the character in the live-action television series Iron Fist, The Defenders, and the upcoming second season of Luke Cage.
+</p><p>
+See also Power Man and Iron Fist <a href="../Powerman/Powerman50.html">Powerman #50</a>
 </p>
 
 </body>
